CVEs/BUG-2010_Libslirp/Reports/Source_Code_Reports/infer_report.txt
#0
src/mbuf.c:158: error: Null Dereference
  pointer `m->m_ext` last assigned on line 157 could be null and is dereferenced by call to `memcpy()` at line 158, column 9.
  156.         gapsize = m->m_data - m->m_dat;
  157.         m->m_ext = g_malloc(size + gapsize);
  158.         memcpy(m->m_ext, m->m_dat, m->m_size);
               ^
  159.         m->m_flags |= M_EXT;
  160.     }

#1
src/vmstate.c:211: error: Null Dereference
  pointer `tmp` last assigned on line 208 could be null and is dereferenced at line 211, column 5.
  209. 
  210.     /* Writes the parent field which is at the start of the tmp */
  211.     *(void **)tmp = pv;
           ^
  212.     ret = slirp_vmstate_load_state(f, vmsd, tmp, version_id);
  213.     g_free(tmp);

#2
src/vmstate.c:225: error: Null Dereference
  pointer `tmp` last assigned on line 221 could be null and is dereferenced at line 225, column 5.
  223. 
  224.     /* Writes the parent field which is at the start of the tmp */
  225.     *(void **)tmp = pv;
           ^
  226.     ret = slirp_vmstate_save_state(f, vmsd, tmp);
  227.     g_free(tmp);

#3
src/tftp.c:255: error: Resource Leak
  resource acquired by call to `tftp_read_data()` at line 247, column 15 is not released after line 255, column 9.
  253.         /* send "file not found" error back */
  254. 
  255.         tftp_send_error(spt, 1, "File not found", tp);
               ^
  256. 
  257.         return;

#4
src/tftp.c:262: error: Resource Leak
  resource acquired by call to `tftp_read_data()` at line 247, column 15 is not released after line 262, column 5.
  260.     m->m_len = sizeof(struct tftp_t) - (TFTP_BLOCKSIZE_MAX - nobytes) -
  261.                sizeof(struct udphdr);
  262.     tftp_udp_output(spt, m, recv_tp);
           ^
  263. 
  264.     if (nobytes == spt->block_size) {

Found 5 issues
          Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULL_DEREFERENCE): 3
        Resource Leak(RESOURCE_LEAK): 2
